--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,14 @@
 page-home {
-
+    .logo {
+        display: block;
+        background: url(../../assets/imgs/qingtingfm-pink.png);
+        width: 85px;
+        height: 30px;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .slide-img {
+        width: 100%;
+        height: 150px;
+    }
 }
