--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -11,4 +11,26 @@ page-home {
         width: 100%;
         height: 150px;
     }
+    .category {
+        position: relative;
+        width: 55%;
+        text-align: center;
+
+        .category-item {
+            width: 100% !important;
+            font-size: 1em;
+        }
+        .swiper-slide-active {
+            border-bottom: 2px solid #FF6060;
+            .slide-zoom {
+                color: #FF6060;
+            }
+        }
+    }
+    .content-list {
+        ion-list-header ion-label {
+            border-left: 3px solid #FF6060;
+            padding-left: 10px;
+        }
+    }
 }
