--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,6 +7,15 @@ page-home {
         background-size: contain;
         background-repeat: no-repeat;
     }
+    .header-text {
+        font-family: '华文行楷';
+        font-size: 25px;
+        width: 85px;
+        height: 35px;
+        line-height: 35px;
+        color: #FF6060;
+        padding-left: 3px;
+    }
     .slide-img {
         width: 100%;
         height: 150px;
