--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -16,9 +16,13 @@ page-home {
         color: #FF6060;
         padding-left: 3px;
     }
-    .slide-img {
+    .slide-box {
         width: 100%;
-        height: 150px;
+        height: 125px;
+    }
+    .slide-item {
+        background-size: contain;
+        background-repeat: no-repeat;
     }
     .category {
         position: relative;
@@ -41,5 +45,8 @@ page-home {
             border-left: 3px solid #FF6060;
             padding-left: 10px;
         }
+    }
+    .card-title {
+        color: #FF6060;
     }
 }
